# np2m

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  circle20.geo  newcircle20.geo  newcircle20.msh  newsphere50.geo  newsphere50.msh  sphere50.geo
include/: GeoReader.h  StringUtils.h
src/: main.cpp
src/GeoReader/: GeoReader.cpp  GeoReaderRun.cpp  JudgeFuns.cpp  ModifyForCirlce.cpp  ModifyForSphere.cpp  PrintHelper.cpp  PrintInfo.cpp  ReadGeoFile.cpp  RunJobForCircle.cpp  RunJobForCubic.cpp  RunJobForRect.cpp
src/StringUtils/: LowerAndUpperCaseConvert.cpp  RemoveSpace.cpp  SplitNumVecFromString.cpp  SplitStringVecBySymbol.cpp
tests/cubic/: cube.geo  newcube.geo
tests/rectangle/: newrect.geo  rect.geo
